force-app/main/default/objects/Case/fields/AcaoRespostaReclamacao__c.field-meta.xml
<CustomField>
    <fullName>AcaoRespostaReclamacao__c</fullName>
    <label>Ação de resposta da reclamação</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>