force-app/main/default/objects/Case/fields/AcaoSolucaoReclamacao__c.field-meta.xml
<CustomField>
    <fullName>AcaoSolucaoReclamacao__c</fullName>
    <label>Ação de solução da reclamação</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>