force-app/main/default/objects/Case/fields/Alerta_10h_depois__c.field-meta.xml
<CustomField>
    <fullName>Alerta_10h_depois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta 10h depois</label>
    <type>Checkbox</type>
</CustomField>