force-app/main/default/objects/Case/fields/Alerta_1h_antes__c.field-meta.xml
<CustomField>
    <fullName>Alerta_1h_antes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta 1h antes</label>
    <type>Checkbox</type>
</CustomField>