force-app/main/default/objects/Case/fields/Alerta_4h_antes__c.field-meta.xml
<CustomField>
    <fullName>Alerta_4h_antes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta 4h antes</label>
    <type>Checkbox</type>
</CustomField>