force-app/main/default/objects/Case/fields/Alerta_6h_depois__c.field-meta.xml
<CustomField>
    <fullName>Alerta_6h_depois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta 6h depois</label>
    <type>Checkbox</type>
</CustomField>