force-app/main/default/objects/Case/fields/Area_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Area_responsavel__c</fullName>
    <label>Área responsável</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_responsavel_MX</valueSetName>
    </valueSet>
</CustomField>