force-app/main/default/objects/Case/fields/CaseAssigned__c.field-meta.xml
<CustomField>
    <fullName>CaseAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CaseAssigned</label>
    <type>Checkbox</type>
</CustomField>