force-app/main/default/objects/Case/fields/CausaReclamacao__c.field-meta.xml
<CustomField>
    <fullName>CausaReclamacao__c</fullName>
    <label>Causa da reclamação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MotivoReclamacao__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acidente ocasionado pelo técnico</fullName>
            </value>
            <value>
                <fullName>Agenda da região não mapeada</fullName>
            </value>
            <value>
                <fullName>Agendou na data errada</fullName>
            </value>
            <value>
                <fullName>Agendou no ponto incorreto</fullName>
            </value>
            <value>
                <fullName>Alto backlog da área de transferência</fullName>
            </value>
            <value>
                <fullName>Aplicativo não funcionou</fullName>
            </value>
            <value>
                <fullName>Atendente não foi cordial</fullName>
            </value>
            <value>
                <fullName>Atendente não sabia as informações</fullName>
            </value>
            <value>
                <fullName>Atendente passou informações incorretas</fullName>
            </value>
            <value>
                <fullName>Atendente realizou cobrança indevida</fullName>
            </value>
            <value>
                <fullName>Atraso da empresa de nota fiscal eletrônica</fullName>
            </value>
            <value>
                <fullName>Atraso da gráfica</fullName>
            </value>
            <value>
                <fullName>Atraso dos correios</fullName>
            </value>
            <value>
                <fullName>Atraso no deslocamento</fullName>
            </value>
            <value>
                <fullName>Atraso no serviço anterior</fullName>
            </value>
            <value>
                <fullName>Cancelado indevidamente pela régua de cobrança</fullName>
            </value>
            <value>
                <fullName>Cláusula contratual não é informada no fechamento da venda</fullName>
            </value>
            <value>
                <fullName>Cliente cadastrado incorretamente</fullName>
            </value>
            <value>
                <fullName>Cliente não entende faturamento</fullName>
            </value>
            <value>
                <fullName>Cliente não enviou todos documentos necessários</fullName>
            </value>
            <value>
                <fullName>Cliente não solicitou transferência</fullName>
            </value>
            <value>
                <fullName>Contrato ou gravação não encontrada</fullName>
            </value>
            <value>
                <fullName>Demanda maior que disponibilidade de agenda</fullName>
            </value>
            <value>
                <fullName>Endereço incorreto</fullName>
            </value>
            <value>
                <fullName>Endereço não encontrado</fullName>
            </value>
            <value>
                <fullName>Equipamento ou acessório estragou</fullName>
            </value>
            <value>
                <fullName>Erro de faturamento de multas</fullName>
            </value>
            <value>
                <fullName>Erro de faturamento de serviços</fullName>
            </value>
            <value>
                <fullName>Erro de faturamento de taxas</fullName>
            </value>
            <value>
                <fullName>Erro operacional do atendimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>