force-app/main/default/objects/Case/fields/Cidades__c.field-meta.xml
<CustomField>
    <fullName>Cidades__c</fullName>
    <label>Cidades</label>
    <type>TextArea</type>
</CustomField>