force-app/main/default/objects/Case/fields/Cliente_de_acordo_com_a_solucao__c.field-meta.xml
<CustomField>
    <fullName>Cliente_de_acordo_com_a_solucao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente de acordo com a solução?</label>
    <type>Checkbox</type>
</CustomField>