force-app/main/default/objects/Case/fields/Cliente_Sascar__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Sascar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Sascar</label>
    <type>Checkbox</type>
</CustomField>