force-app/main/default/objects/Case/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <label>CNPJ/CPF</label>
    <length>14</length>
    <type>Text</type>
</CustomField>