force-app/main/default/objects/Case/fields/CodProcesso__c.field-meta.xml
<CustomField>
    <fullName>CodProcesso__c</fullName>
    <label>Cod Processo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>