force-app/main/default/objects/Case/fields/Comentario_cliente__c.field-meta.xml
<CustomField>
    <fullName>Comentario_cliente__c</fullName>
    <label>Comentário ao cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>