force-app/main/default/objects/Case/fields/Comentario_feedback__c.field-meta.xml
<CustomField>
    <fullName>Comentario_feedback__c</fullName>
    <label>Comentário do feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>