force-app/main/default/objects/Case/fields/Comentarios_adicionados__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_adicionados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comentários adicionados</label>
    <type>Checkbox</type>
</CustomField>