force-app/main/default/objects/Case/fields/Comentarios_Internos__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Internos__c</fullName>
    <label>Comentários Internos</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>