force-app/main/default/objects/Case/fields/ConclusaoReclamacao__c.field-meta.xml
<CustomField>
    <fullName>ConclusaoReclamacao__c</fullName>
    <label>Conclusão da reclamação</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>