force-app/main/default/objects/Case/fields/Conta_MX__c.field-meta.xml
<CustomField>
    <fullName>Conta_MX__c</fullName>
    <label>Contrato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>