force-app/main/default/objects/Case/fields/CustoReclamacao__c.field-meta.xml
<CustomField>
    <fullName>CustoReclamacao__c</fullName>
    <label>Custo da reclamação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>