force-app/main/default/objects/Case/fields/Data_atendimento_tecnico__c.field-meta.xml
<CustomField>
    <fullName>Data_atendimento_tecnico__c</fullName>
    <label>Data do atendimento técnico</label>
    <type>DateTime</type>
</CustomField>