force-app/main/default/objects/Case/fields/Data_feedback__c.field-meta.xml
<CustomField>
    <fullName>Data_feedback__c</fullName>
    <label>Data do feedback</label>
    <type>DateTime</type>
</CustomField>