force-app/main/default/objects/Case/fields/Data_solicitacao__c.field-meta.xml
<CustomField>
    <fullName>Data_solicitacao__c</fullName>
    <label>Data da solicitação</label>
    <type>DateTime</type>
</CustomField>