force-app/main/default/objects/Case/fields/DataConclusao__c.field-meta.xml
<CustomField>
    <fullName>DataConclusao__c</fullName>
    <label>Data da conclusão</label>
    <type>Date</type>
</CustomField>