force-app/main/default/objects/Case/fields/DataFinalizacaoAcaoSolucao__c.field-meta.xml
<CustomField>
    <fullName>DataFinalizacaoAcaoSolucao__c</fullName>
    <label>Data finalização da ação da solução</label>
    <type>DateTime</type>
</CustomField>