force-app/main/default/objects/Case/fields/DataFinalizacaoResposta__c.field-meta.xml
<CustomField>
    <fullName>DataFinalizacaoResposta__c</fullName>
    <label>Data da finalização da resposta</label>
    <type>DateTime</type>
</CustomField>