force-app/main/default/objects/Case/fields/Descricao_da_reclamacao__c.field-meta.xml
<CustomField>
    <fullName>Descricao_da_reclamacao__c</fullName>
    <label>Descrição da reclamação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>