force-app/main/default/objects/Case/fields/Descricao_motivo__c.field-meta.xml
<CustomField>
    <fullName>Descricao_motivo__c</fullName>
    <label>Descrição interna</label>
    <type>TextArea</type>
</CustomField>