force-app/main/default/objects/Case/fields/DetalheCausaReclamacao__c.field-meta.xml
<CustomField>
    <fullName>DetalheCausaReclamacao__c</fullName>
    <label>Detalhe da causa da Reclamação</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>