force-app/main/default/objects/Case/fields/DetalhesCusto__c.field-meta.xml
<CustomField>
    <fullName>DetalhesCusto__c</fullName>
    <label>Detalhes do custo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>