force-app/main/default/objects/Case/fields/DMV__c.field-meta.xml
<CustomField>
    <fullName>DMV__c</fullName>
    <label>DMV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMV1100</fullName>
            </value>
            <value>
                <fullName>DMV1101</fullName>
            </value>
            <value>
                <fullName>DMV1102</fullName>
            </value>
            <value>
                <fullName>DMV1103</fullName>
            </value>
            <value>
                <fullName>DMV1104</fullName>
            </value>
            <value>
                <fullName>DMV1105</fullName>
            </value>
            <value>
                <fullName>DMV1106</fullName>
            </value>
            <value>
                <fullName>DMV1200</fullName>
            </value>
            <value>
                <fullName>DMV1201</fullName>
            </value>
            <value>
                <fullName>DMV1202</fullName>
            </value>
            <value>
                <fullName>DMV1204</fullName>
            </value>
            <value>
                <fullName>DMV1205</fullName>
            </value>
            <value>
                <fullName>DMV1206</fullName>
            </value>
            <value>
                <fullName>DMV1207</fullName>
            </value>
            <value>
                <fullName>DMV1208</fullName>
            </value>
            <value>
                <fullName>DMV1300</fullName>
            </value>
            <value>
                <fullName>DMV1301</fullName>
            </value>
            <value>
                <fullName>DMV1302</fullName>
            </value>
            <value>
                <fullName>DMV1303</fullName>
            </value>
            <value>
                <fullName>DMV1304</fullName>
            </value>
            <value>
                <fullName>DMV2000</fullName>
            </value>
            <value>
                <fullName>DMV2100</fullName>
            </value>
            <value>
                <fullName>DMV2101</fullName>
            </value>
            <value>
                <fullName>DMV2102</fullName>
            </value>
            <value>
                <fullName>DMV2104</fullName>
            </value>
            <value>
                <fullName>DMV2105</fullName>
            </value>
            <value>
                <fullName>DMV2106</fullName>
            </value>
            <value>
                <fullName>DMV2107</fullName>
            </value>
            <value>
                <fullName>DMV2108</fullName>
            </value>
            <value>
                <fullName>DMV3000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>