force-app/main/default/objects/Case/fields/EmailCliente__c.field-meta.xml
<CustomField>
    <fullName>EmailCliente__c</fullName>
    <label>Email do cliente</label>
    <type>Email</type>
</CustomField>