force-app/main/default/objects/Case/fields/Hexadecimal__c.field-meta.xml
<CustomField>
    <fullName>Hexadecimal__c</fullName>
    <label>Hexadecimal</label>
    <type>TextArea</type>
</CustomField>