force-app/main/default/objects/Case/fields/Incidente_procedente__c.field-meta.xml
<CustomField>
    <fullName>Incidente_procedente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incidente procedente</label>
    <type>Checkbox</type>
</CustomField>