force-app/main/default/objects/Case/fields/ISN__c.field-meta.xml
<CustomField>
    <fullName>ISN__c</fullName>
    <label>ISN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>