force-app/main/default/objects/Case/fields/Motivo_baixa__c.field-meta.xml
<CustomField>
    <fullName>Motivo_baixa__c</fullName>
    <label>Motivo de baixa de NUID</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetName>Motivo_baixa_MX</valueSetName>
    </valueSet>
</CustomField>