force-app/main/default/objects/Case/fields/Motivo_cancelamento__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cancelamento__c</fullName>
    <label>Motivo do cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetName>Motivo_cancelamento_MX</valueSetName>
    </valueSet>
</CustomField>