force-app/main/default/objects/Case/fields/MotivoReclamacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoReclamacao__c</fullName>
    <label>Motivo da reclamação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendamento cancelado</fullName>
            </value>
            <value>
                <fullName>Indisponibilidade de agenda</fullName>
            </value>
            <value>
                <fullName>Técnico não compareceu</fullName>
            </value>
            <value>
                <fullName>Transferência de titularidade não concluída</fullName>
            </value>
            <value>
                <fullName>Cancelamento/Downgrade de contrato não concluído</fullName>
            </value>
            <value>
                <fullName>Informações contratuais e comerciais</fullName>
            </value>
            <value>
                <fullName>Cobrança indevida</fullName>
            </value>
            <value>
                <fullName>Não recebimento do boleto</fullName>
            </value>
            <value>
                <fullName>Atendimento ruim</fullName>
            </value>
            <value>
                <fullName>Avaria no veículo</fullName>
            </value>
            <value>
                <fullName>Problemas técnicos com a solução</fullName>
            </value>
            <value>
                <fullName>Outros assuntos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>