force-app/main/default/objects/Case/fields/MX_1a_Notificacao__c.field-meta.xml
<CustomField>
    <fullName>MX_1a_Notificacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MX - 1a Notificação</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos2</relationshipName>
    <type>Lookup</type>
</CustomField>