force-app/main/default/objects/Case/fields/MX_Reavaliar_Alerta_1__c.field-meta.xml
<CustomField>
    <fullName>MX_Reavaliar_Alerta_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX - Reavaliar Alerta 1</label>
    <type>Checkbox</type>
</CustomField>