force-app/main/default/objects/Case/fields/NivelEscalacao__c.field-meta.xml
<CustomField>
    <fullName>NivelEscalacao__c</fullName>
    <label>Nível de escalação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N1</fullName>
                <default>true</default>
                <label>N1</label>
            </value>
            <value>
                <fullName>N2</fullName>
            </value>
            <value>
                <fullName>N3</fullName>
            </value>
            <value>
                <fullName>N4</fullName>
            </value>
            <value>
                <fullName>N5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>