force-app/main/default/objects/Case/fields/NomeCliente__c.field-meta.xml
<CustomField>
    <fullName>NomeCliente__c</fullName>
    <label>Nome do cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>