force-app/main/default/objects/Case/fields/NOS__c.field-meta.xml
<CustomField>
    <fullName>NOS__c</fullName>
    <label>Nº OS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>