force-app/main/default/objects/Case/fields/NProtocoloAtendimento__c.field-meta.xml
<CustomField>
    <fullName>NProtocoloAtendimento__c</fullName>
    <label>Nº Protocolo Atendimento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>