force-app/main/default/objects/Case/fields/NUCLI__c.field-meta.xml
<CustomField>
    <fullName>NUCLI__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NUCLI</label>
    <type>Text</type>
</CustomField>