force-app/main/default/objects/Case/fields/NUID__c.field-meta.xml
<CustomField>
    <fullName>NUID__c</fullName>
    <label>NUID</label>
    <type>TextArea</type>
</CustomField>