force-app/main/default/objects/Case/fields/Numero_CAC__c.field-meta.xml
<CustomField>
    <fullName>Numero_CAC__c</fullName>
    <displayFormat>CAC-{00000}</displayFormat>
    <label>Número CAC</label>
    <type>AutoNumber</type>
</CustomField>