force-app/main/default/objects/Case/fields/Pendencia__c.field-meta.xml
<CustomField>
    <fullName>Pendencia__c</fullName>
    <label>Pendência para seguir com o tratamento</label>
    <type>TextArea</type>
</CustomField>