force-app/main/default/objects/Case/fields/PrazoConclusaoResposta__c.field-meta.xml
<CustomField>
    <fullName>PrazoConclusaoResposta__c</fullName>
    <label>Prazo de conclusão da resposta</label>
    <type>DateTime</type>
</CustomField>