force-app/main/default/objects/Case/fields/PrazoConclusaoSolucao__c.field-meta.xml
<CustomField>
    <fullName>PrazoConclusaoSolucao__c</fullName>
    <label>Prazo de conclusão da solução</label>
    <type>DateTime</type>
</CustomField>