force-app/main/default/objects/Case/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <label>Procedência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procedente</fullName>
            </value>
            <value>
                <fullName>Improcedente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>