force-app/main/default/objects/Case/fields/ProprietarioConta__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioConta__c</fullName>
    <formula>Account.Owner.FirstName + &#39; &#39; + Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário da conta</label>
    <type>Text</type>
</CustomField>