force-app/main/default/objects/Case/fields/Quantidade_NUID__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_NUID__c</fullName>
    <label>Quantidade de NUID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>