force-app/main/default/objects/Case/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <formula>TEXT(Account.Owner.Regional__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional</label>
    <type>Text</type>
</CustomField>