force-app/main/default/objects/Case/fields/Registro_inserido__c.field-meta.xml
<CustomField>
    <fullName>Registro_inserido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registro inserido</label>
    <type>Checkbox</type>
</CustomField>