force-app/main/default/objects/Case/fields/Resolucao__c.field-meta.xml
<CustomField>
    <fullName>Resolucao__c</fullName>
    <label>Resolução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Resolucao_MX</valueSetName>
    </valueSet>
</CustomField>