force-app/main/default/objects/Case/fields/Responsavel_CAC__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_CAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável CAC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>