force-app/main/default/objects/Case/fields/ResponsavelOuvidoria__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelOuvidoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável Ouvidoria</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>