force-app/main/default/objects/Case/fields/Resposta_de_resolucao_ao_cliente__c.field-meta.xml
<CustomField>
    <fullName>Resposta_de_resolucao_ao_cliente__c</fullName>
    <label>Resposta de resolução ao cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>