force-app/main/default/objects/Case/fields/respostaAtrasada__c.field-meta.xml
<CustomField>
    <fullName>respostaAtrasada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>resposta atrasada?</label>
    <type>Checkbox</type>
</CustomField>