force-app/main/default/objects/Case/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGRONEGÓCIOS / USINA</fullName>
            </value>
            <value>
                <fullName>ALIMENTÍCIA</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO</fullName>
            </value>
            <value>
                <fullName>AUTOPEÇAS E COMBUSTÍVEIS</fullName>
            </value>
            <value>
                <fullName>CIGARRO</fullName>
            </value>
            <value>
                <fullName>DISTRIBUIDORA</fullName>
            </value>
            <value>
                <fullName>ELETROELETRÔNICOS</fullName>
            </value>
            <value>
                <fullName>ESCOLAR</fullName>
            </value>
            <value>
                <fullName>FARMACÊUTICOS</fullName>
            </value>
            <value>
                <fullName>FRETEIRO</fullName>
            </value>
            <value>
                <fullName>FROTA</fullName>
            </value>
            <value>
                <fullName>GÁS</fullName>
            </value>
            <value>
                <fullName>LINHA AMARELA</fullName>
            </value>
            <value>
                <fullName>MADEIREIRA</fullName>
            </value>
            <value>
                <fullName>MAQUINA/OUTROS</fullName>
            </value>
            <value>
                <fullName>METALÚRGICOS E QUÍMICOS</fullName>
            </value>
            <value>
                <fullName>MUDANÇAS</fullName>
            </value>
            <value>
                <fullName>SEGURADORA</fullName>
            </value>
            <value>
                <fullName>SIGGO</fullName>
            </value>
            <value>
                <fullName>TÊXTEIS E CONFECÇÕES</fullName>
            </value>
            <value>
                <fullName>TRANSPORTE</fullName>
            </value>
            <value>
                <fullName>TURISMO</fullName>
            </value>
            <value>
                <fullName>VIVO</fullName>
            </value>
            <value>
                <fullName>OUTRO</fullName>
            </value>
            <value>
                <fullName>COMÉRCIO</fullName>
            </value>
            <value>
                <fullName>CONSTRUÇÃO CIVIL</fullName>
            </value>
            <value>
                <fullName>LOCADORA</fullName>
            </value>
            <value>
                <fullName>SERVIÇOS</fullName>
            </value>
            <value>
                <fullName>TRANSPORTE DE PESSOAS</fullName>
            </value>
            <value>
                <fullName>TRANSPORTE ESCOLAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>