force-app/main/default/objects/Case/fields/SegmentoCliente__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCliente__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento do cliente</label>
    <type>Text</type>
</CustomField>