force-app/main/default/objects/Case/fields/Servidor__c.field-meta.xml
<CustomField>
    <fullName>Servidor__c</fullName>
    <label>Servidor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servidor</valueSetName>
    </valueSet>
</CustomField>