force-app/main/default/objects/Case/fields/SolucaoAtrasada__c.field-meta.xml
<CustomField>
    <fullName>SolucaoAtrasada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solução atrasada?</label>
    <type>Checkbox</type>
</CustomField>