force-app/main/default/objects/Case/fields/SolucaoSegmento__c.field-meta.xml
<CustomField>
    <fullName>SolucaoSegmento__c</fullName>
    <label>Solução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sascar</fullName>
            </value>
            <value>
                <fullName>Cargo Tracck</fullName>
            </value>
            <value>
                <fullName>Bluetec</fullName>
            </value>
            <value>
                <fullName>Siggo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>