force-app/main/default/objects/Case/fields/StatusProcesso__c.field-meta.xml
<CustomField>
    <fullName>StatusProcesso__c</fullName>
    <label>Status Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciada</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Atrasada</fullName>
            </value>
            <value>
                <fullName>Concluída com atraso</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>