force-app/main/default/objects/Case/fields/StatusSolucao__c.field-meta.xml
<CustomField>
    <fullName>StatusSolucao__c</fullName>
    <label>Status da solução</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciada</fullName>
            </value>
            <value>
                <fullName>Atrasada</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Em andamento aguardando cliente</fullName>
            </value>
            <value>
                <fullName>Atrasado aguardando cliente</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Concluída com atraso</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>