force-app/main/default/objects/Case/fields/SubOrigem__c.field-meta.xml
<CustomField>
    <fullName>SubOrigem__c</fullName>
    <label>Sub Origem</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fale conosco</fullName>
            </value>
            <value>
                <fullName>Reclame aqui</fullName>
            </value>
            <value>
                <fullName>Portal de serviços</fullName>
            </value>
            <value>
                <fullName>Site Sascar</fullName>
            </value>
            <value>
                <fullName>Site Siggo</fullName>
            </value>
            <value>
                <fullName>Site Bluetec</fullName>
            </value>
            <value>
                <fullName>Site Cargo Tracck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>