force-app/main/default/objects/Case/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queja</fullName>
            </value>
            <value>
                <fullName>Incidente</fullName>
            </value>
            <value>
                <fullName>Problema</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>