force-app/main/default/objects/Case/fields/TelefoneCliente__c.field-meta.xml
<CustomField>
    <fullName>TelefoneCliente__c</fullName>
    <label>Telefone do cliente</label>
    <type>Phone</type>
</CustomField>