force-app/main/default/objects/Case/fields/Tempo_restante_SLA__c.field-meta.xml
<CustomField>
    <fullName>Tempo_restante_SLA__c</fullName>
    <formula>TEXT(FLOOR((PrazoConclusaoSolucao__c - NOW())*24))  &amp; &quot; hora(s) e &quot; &amp; 

TEXT(
FLOOR(
(PrazoConclusaoSolucao__c - NOW())*1440
-
FLOOR((PrazoConclusaoSolucao__c - NOW())*24)*60
)
)

&amp; &quot; minuto(s).&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo restante (SLA)</label>
    <type>Text</type>
</CustomField>